# smartops-openenv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
env/: environment.py  models.py  tasks.py
server/: app.py
smartops_openenv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
