[project]
name = "smartops-openenv"
version = "0.1.0"
description = "Customer support triage environment for OpenEnv hackathon"
authors = [{ name = "Tamoghna" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==1.30.1",
    "sentence-transformers==2.7.0",
    "torch==2.2.2"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"